added firebase documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "ENVK",
+        "Firestore",
         "headlessui",
         "noopener",
         "noreferrer",
-        "tailwindcss"
+        "tailwindcss",
+        "VXKY"
     ]
 }
