--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "punycode.js": "^2.3.1",
     "react": "^18",
