--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.12.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "punycode": "^2.3.1",
     "punycode.js": "^2.3.1",
     "react": "^18",
     "react-dom": "^18"
