--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.6.4",
     "firebase": "^10.12.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
