created test to ensure code is working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,12 @@
         "ENVK",
         "Firestore",
         "headlessui",
+        "lcov",
         "noopener",
         "noreferrer",
         "tailwindcss",
+        "tlmoo",
+        "unmocked",
         "VXKY"
     ]
 }
